--- a/Home.css
+++ b/Home.css
@@ -55,12 +55,6 @@
   }
 }
 
-@media (max-width: 767px) {
-  .u-section-1-1 .u-sheet-1 {
-    min-height: 338px;
-  }
-}
-
 @media (max-width: 575px) {
   .u-section-1-1 .u-sheet-1 {
     min-height: 300px;
@@ -182,7 +176,7 @@
     min-height: 149px;
   }
 } .u-section-2 {
-  background-image: linear-gradient(white, #d80000);
+  background-image: linear-gradient(white, #be0000);
   min-height: 1439px;
 }
 
@@ -1415,3 +1409,13 @@
     left: -91%;
   }
 }
+
+::-webkit-scrollbar{
+width: 15px;
+}
+::-webkit-scrollbar-track{
+background: #000000;
+}
+::-webkit-scrollbar-thumb{
+background: linear-gradient(#FFFF00,#FF0000);
+border-radius: 10px;
