--- a/header.css
+++ b/header.css
@@ -38825,21 +38825,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 176px;
-}
-
-.u-header .u-btn-1 {
-  background-image: none;
-  border-style: solid;
-  margin: 24px 32px 0 auto;
-  padding: 10px 40px;
-}
-
-.u-header .u-btn-2 {
-  background-image: none;
-  border-style: solid;
-  margin: -53px 191px 0 auto;
-  padding: 10px 40px;
+  min-height: 92px;
 }
 
 .u-header .u-social-icons-1 {
@@ -38849,7 +38835,7 @@ a.u-link.u-text-hover-grey-90:hover {
   width: 250px;
   min-width: 100px;
   box-shadow: 2px 0 0 0 rgba(0,0,0,0);
-  margin: 27px auto 0 21px;
+  margin: 18px auto 0 21px;
 }
 
 .u-header .u-icon-1 {
@@ -38868,13 +38854,13 @@ a.u-link.u-text-hover-grey-90:hover {
   height: 53px;
 }
 
-.u-header .u-btn-3 {
+.u-header .u-btn-1 {
   letter-spacing: 1px;
   font-weight: 700;
   text-transform: uppercase;
   border-style: solid;
   background-image: none;
-  margin: -60px 268px 0 auto;
+  margin: -58px 277px 0 auto;
   padding: 14px 30px 16px;
 }
 
@@ -38882,13 +38868,13 @@ a.u-link.u-text-hover-grey-90:hover {
   font-size: 1.125em;
 }
 
-.u-header .u-btn-4 {
+.u-header .u-btn-2 {
   letter-spacing: 1px;
   font-weight: 700;
   text-transform: uppercase;
   background-image: none;
   border-style: solid;
-  margin: -66px 20px 16px auto;
+  margin: -66px 25px 14px auto;
   padding: 13px 30px 14px;
 }
 
@@ -38939,15 +38925,6 @@ a.u-link.u-text-hover-grey-90:hover {
   font-weight: 700;
 }
 @media (max-width: 1199px) {
-  .u-header .u-btn-1 {
-    margin-right: 148px;
-  }
-
-  .u-header .u-btn-2 {
-    margin-top: -53px;
-    margin-right: 0;
-  }
-
   .u-header .u-social-icons-1 {
     width: 250px;
     --animation-custom_in-translate_x: 0px;
@@ -38959,12 +38936,12 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-left: 16px;
   }
 
-  .u-header .u-btn-3 {
-    margin-top: -60px;
+  .u-header .u-btn-1 {
+    margin-top: -58px;
     margin-right: 272px;
   }
 
-  .u-header .u-btn-4 {
+  .u-header .u-btn-2 {
     align-self: flex-end;
     margin-top: -66px;
     margin-right: 16px;
@@ -38986,23 +38963,15 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 }
 @media (max-width: 991px) {
-  .u-header .u-btn-1 {
-    margin-right: 0;
-  }
-
-  .u-header .u-btn-2 {
-    margin-right: 153px;
-  }
-
   .u-header .u-social-icons-1 {
     margin-left: -30px;
   }
 
-  .u-header .u-btn-3 {
+  .u-header .u-btn-1 {
     margin-right: -36px;
   }
 
-  .u-header .u-btn-4 {
+  .u-header .u-btn-2 {
     margin-right: 216px;
   }
 }
@@ -39034,27 +39003,19 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 }
 @media (max-width: 767px) {
-  .u-header .u-btn-1 {
-    margin-right: 148px;
-  }
-
-  .u-header .u-btn-2 {
-    margin-right: 0;
-  }
-
   .u-header .u-social-icons-1 {
     width: 243px;
     height: 52px;
     margin-left: auto;
   }
 
-  .u-header .u-btn-3 {
+  .u-header .u-btn-1 {
     margin-top: 29px;
     margin-right: auto;
     margin-left: 0;
   }
 
-  .u-header .u-btn-4 {
+  .u-header .u-btn-2 {
     margin-top: -66px;
     margin-right: 0;
     margin-bottom: 12px;
@@ -39084,33 +39045,29 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 @media (max-width: 575px) {
   .u-header .u-sheet-1 {
-    min-height: 306px;
-  }
-
-  .u-header .u-btn-1 {
-    margin-top: 14px;
-    margin-right: 18px;
-  }
-
-  .u-header .u-btn-2 {
-    margin-right: auto;
-    margin-left: 16px;
+    min-height: 146px;
   }
 
   .u-header .u-social-icons-1 {
     width: 197px;
     height: 40px;
+    margin-top: 13px;
   }
 
-  .u-header .u-btn-3 {
-    margin-top: 16px;
+  .u-header .u-btn-1 {
+    margin-top: 13px;
+    margin-right: -32px;
     margin-left: auto;
+    padding-right: 10px;
+    padding-bottom: 15px;
+    padding-left: 8px;
   }
 
-  .u-header .u-btn-4 {
-    margin-top: 9px;
-    margin-right: auto;
-    margin-bottom: 17px;
+  .u-header .u-btn-2 {
+    padding-right: 9px;
+    padding-bottom: 15px;
+    padding-left: 8px;
+    margin: -66px auto 13px -39px;
   }
 }
 @media (max-width: 575px) {
@@ -39121,18 +39078,17 @@ a.u-link.u-text-hover-grey-90:hover {
   .u-header .u-image-1 {
     width: 220px;
     height: 206px;
-    margin-top: 5px;
-    margin-left: -35px;
+    margin-top: 0;
+    margin-left: -42px;
   }
 
   .u-header .u-menu-1 {
-    margin-top: -130px;
+    margin-top: -125px;
     margin-right: 12px;
   }
 
   .u-header .u-file-icon-6 {
     font-size: calc(1em + 28px);
-    padding: 14px 56px;
   }
 }
 .u-footer .u-sheet-1 {
